package server.game;



public abstract class Obstacle extends Thing {

    Obstacle(World world) {
        super(world);
    }

}
